--- a/tasks/parallels-start.yml
+++ b/tasks/parallels-start.yml
@@ -7,4 +7,7 @@
   ignore_errors: yes
 
 - name: Wait for connection
-  wait_for_connection:
+  vars:
+    ansible_ssh_retries: 60
+    ansible_ssh_timeout: 10
+  raw: whoami
