Use bootstrap MacPorts only when nessesary

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,7 @@
 [defaults]
 inventory = hosts
-
-# always use bootstrap python
-interpreter_python = /opt/bootstrap/libexec/python27-bootstrap/bin/python2.7
+interpreter_python = auto_legacy_silent
+# /opt/bootstrap/libexec/python27-bootstrap/bin/python2.7
 
 [ssh_connection]
 # Prevent poising of know_hosts by ansible
