--- a/tasks/macports-bootstrap.yml
+++ b/tasks/macports-bootstrap.yml
@@ -69,6 +69,7 @@
 - name: Install bootstrap's python
   become: yes
   raw: '{{ bootstrap_prefix }}/bin/port -N install {{ bootstrap_python }}'
+  when: bootstrap_python is defined
 
 - name: Cleanup not requried ports
   become: yes
