Clean install of hostname

--- a/tasks/setup-hostname.yml
+++ b/tasks/setup-hostname.yml
@@ -5,4 +5,7 @@
 - name: Force hostname
   become: yes
   shell: 'scutil --set {{ item }} {{ inventory_hostname }}'
-  with_items: HostName ComputerName LocalHostName
+  with_items:
+    - HostName
+    - ComputerName
+    - LocalHostName
