--- a/maintenance.yml
+++ b/maintenance.yml
@@ -34,10 +34,15 @@
     - import_tasks: tasks/macports.yml
 
     - import_tasks: tasks/cleanup-disk.yml
-      when: prl_id is defined and skip_cleanup_disk is not defined
+      when: (prl_id is defined) and (skip_cleanup_disk is not defined)
 
     - import_tasks: tasks/shrink-disk.yml
-      when: prl_id is defined and skip_shrink_disk is not defined
+      when: (prl_id is defined) and (skip_shrink_disk is not defined)
+
+    # shrink requires a lot of time and Parallels Tools my produces a lot of logs
+    # clean it second time
+    - import_tasks: tasks/cleanup-disk.yml
+      when: (prl_id is defined) and (skip_cleanup_disk is not defined) and (skip_shrink_disk is not defined)
 
     - import_tasks: tasks/parallels-shutdown.yml
       when: prl_id is defined
