--- a/maintenance.yml
+++ b/maintenance.yml
@@ -53,3 +53,10 @@
     - name: Make a clean snapshot
       local_action: command prlctl snapshot {{ prl_id }} -n '{{ snapshot_name }}' -d 'MacPorts {{ version }}'
       when: prl_id is defined
+
+    # simple confirm that it still can start :)
+    - import_tasks: tasks/parallels-start.yml
+      when: prl_id is defined
+
+    - import_tasks: tasks/parallels-shutdown.yml
+      when: prl_id is defined
