--- a/maintenance.yml
+++ b/maintenance.yml
@@ -50,7 +50,7 @@
     - import_tasks: tasks/parallels-shutdown.yml
       when: prl_id is defined
 
-    - name: Make a clean snapshot
+    - name: Make a maintenance snapshot
       local_action: command prlctl snapshot {{ prl_id }} -n '{{ snapshot_name }}' -d 'MacPorts {{ version }}'
       when: prl_id is defined
 
