Use `bootstrap_python` group instead of variable

--- a/maintenance.yml
+++ b/maintenance.yml
@@ -11,15 +11,17 @@
     - import_tasks: tasks/parallels-start.yml
       when: prl_id is defined
 
+    - import_tasks: tasks/prepare.yml
+
     - import_tasks: tasks/macports-bootstrap.yml
-      when: (bootstrap_python is defined) or ('bootstrap_curl' in group_names)
+      when: ('bootstrap_python' in group_names) or ('bootstrap_curl' in group_names)
 
     - name: Remove bootstrap MacPorts
       become: yes
       file:
         state: absent
         path: '{{ bootstrap_prefix }}'
-      when: (bootstrap_python is not defined) and ('bootstrap_curl' not in group_names)
+      when: ('bootstrap_python' not in group_names) and ('bootstrap_curl' not in group_names)
 
     - name: Gather facts
       gather_facts:
