--- a/maintenance.yml
+++ b/maintenance.yml
@@ -31,7 +31,7 @@
     - import_tasks: tasks/setup-hostname.yml
 
     - import_tasks: tasks/parallels-install-tools.yml
-      when: (prl_id is defined) and (skip_parallels_tools is not defined)
+      when: (prl_id is defined) and ('skip_parallels_tools' not in group_names)
 
     - import_tasks: tasks/install-updates.yml
       when: skip_updates is not defined
