Use ssh pipeline

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,6 +6,7 @@ interpreter_python = auto_legacy_silent
 [ssh_connection]
 # Prevent poising of know_hosts by ansible
 ssh_args = -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+pipelining = True
 
 [privilege_escalation]
 become_ask_pass = true
